Fixed form entries too small on small screens

--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,7 @@ html {
 }
 
 body {
-  font-size: 24px;
+  font-size: 20px;
   margin: 30px;
   padding: 30px;
   background-color: white;
